--- a/src/components/content.css
+++ b/src/components/content.css
@@ -11,9 +11,27 @@
   justify-content: center;
 }
 
+/* input text style */
+.content-submit-form > input[type=text] {
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  margin: 0 5px 0 5px;
+  width: 400px;
+}
+
+.content-submit-form > input[type=text]::placeholder {
+  color: rgb(168, 168, 168);
+  font-size: 0.80em;
+  padding-left: 7px;
+}
+
 .content-text {
+  /* font-stretch: ultra-expanded; */
+  letter-spacing: 2px;
   font-size: 50px;
-  margin: 10% 20% 0 20%;
+  margin: 13% 20% 0 20%;
+  /* width: 75%; */
   text-align: center;
 }
 
