--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 body{
   /* font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   font-family: Montserrat,sans-serif!important;
+  overflow-x: hidden;
 }
 
 p{
