--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 body{
   /* font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-  font-family: Montserrat,sans-serif!important;
+  font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
 }
 
@@ -10,9 +10,15 @@ p{
 
 .app-container {
   background-image: url(./img/minsk.jpg);
+  /* background-size: cover; */
   background-repeat: no-repeat;
-  background: rgba(16, 16, 16, 0.8);
+  background-color: #f7f7f7;
+  /* background: rgba(16, 16, 16, 0.8); */
   /* filter: brightness(50%); */
   /* z-index: -1; */
 
+}
+
+.app-container::after {
+  background-color: rgba(16,16,16,.8);
 }
