--- a/src/components/Content components/Application/application.css
+++ b/src/components/Content components/Application/application.css
@@ -9,14 +9,13 @@
 
 .application-label {
   font-size: 48px;
-  text-align: center;
   padding: 120px 80px;
 }
 
 .application-grid {
   display: grid;
   grid-template-columns: 1fr 300px 1fr;
-  grid-gap: 50px;
+  grid-gap: 30px;
   margin: 0 50px 0 50px;
 }
 
@@ -24,20 +23,22 @@
   display: grid;
   grid-template-rows: 1fr 1fr;
   padding: 50px;
-  /* width: 300px; */
   margin-top: 100px;
 }
 
 .application-grid-block-label {
-  font-size: 18px;
-  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
   padding: 20px;
+  letter-spacing: 1px;
 }
 
 .application-grid-block-description {
   color: gray;
   font-size: 14px;
   text-align: center;
+  font-weight: 100px;
+  line-height: 24px;
 }
 
 /* react icons */
@@ -50,6 +51,10 @@
 
 .application-icon {
   font-size: 35px;
-  color: orange;
-  
+  color: #ffcf29;
+}
+
+/* add to all text */
+.text-center {
+  text-align: center;
 }
