--- a/src/components/Content components/Requirements/requirements.css
+++ b/src/components/Content components/Requirements/requirements.css
@@ -21,18 +21,23 @@
 }
 
 .requirements-list-block ul li {
+  font-size: 16px;
+  font-weight: 600;
   list-style: none;
   padding: 5px;
 }
 
 .requirements-button {
-  font-size: 24px;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 1px;
   padding: 20px 42px;
   border: none;
   border-radius: 30px;
   background-color: #ffdb4d;
   margin-top: 50px;
   margin-left: 50px;
+  cursor: pointer;
 }
 
 .requirements-container img {
