--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -30,7 +30,7 @@
   /* font-stretch: ultra-expanded; */
   letter-spacing: 2px;
   font-size: 50px;
-  margin: 13% 20% 0 20%;
+  padding: 160px 20% 0 20%;
   /* width: 75%; */
   text-align: center;
 }
