--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -1,23 +1,23 @@
 .content-container {
   font-size: 20px;
   color: white;
-  /* height: 2000px; */
-  
 }
 
 .content-submit-form {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 40px 0 20px 0;
 }
 
 /* input text style */
-.content-submit-form > input[type=text] {
+.content-submit-form>input[type=text] {
   padding: 10px;
   border: none;
   border-radius: 10px;
-  margin: 0 5px 0 5px;
+  margin: 0 12px 0 12px;
   width: 400px;
+  font-size: 20px;
 }
 
 .content-submit-form input[type=text]::placeholder {
@@ -37,38 +37,35 @@
 
 .content-text-calling {
   text-align: center;
+  padding: 30px 0 5px 0;
 }
 
 .content-button-center {
   text-align: center;
 }
 
+
+/* number text */
 .content-text-number {
   font-size: 36px;
   color: rgb(255, 255, 70);
   text-align: center;
   animation: redNumber;
   font-weight: 600;
-  /* display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; */
-  /* text-decoration-line: none; */
+  padding-bottom: 60px;
+
+  transition: color 0.4s ease-out;
 }
 
 .content-text-number:hover {
   color: #e61400;
-  animation-name: redNumber;
-  animation-duration: 1s;
   cursor: pointer;
 }
+/* ***************************************************************** */
 
-a:link {
-  text-decoration: none;
-}
 
-a:visited{
-  color:black;
-}
 .content-button-submit {
   font-weight: 500;
   background: rgb(255, 255, 70);
