--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -9,6 +9,7 @@
   border-bottom: 0.05em solid rgba(128, 128, 128, 0.8);
   font-size: 13px;
   width: 100%;
+  transition: all 0.3s ease-out;
 }
 
 .header-container-scrolled {
@@ -23,6 +24,7 @@
 
   font-size: 13px;
   width: 100%;
+  transition: all 0.3s ease-out;
 }
 /* ***************************************************** */
 
@@ -70,6 +72,13 @@
   color: white;
 }
 
+a:visited {
+  color: white;
+}
+
+a:link {
+  text-decoration: none;
+}
 
 /* center navigation */
 .header-container nav {
