--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -80,5 +80,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 70%;
+  position: relative;
+  z-index: -24;
+  top: 150px;
 }
