--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -23,8 +23,6 @@
   transition: all 0.3s ease-out;
   z-index: 3;
 }
-/* ***************************************************** */
-
 
 /* logotype */
 .header-logo {
@@ -48,7 +46,6 @@
 .header-logo-taxi {
   color: white;
 }
-/* ****************************************************** */
 
 .header-container li  {
   display: inline;
@@ -59,8 +56,6 @@
   display: inline;
   margin: 15px 15px 15px 15px;
 }
-
-/* ****************************************************** */
 
 .ul-t {
   /* position: relative; */
@@ -99,8 +94,6 @@ a:link {
   text-decoration: none;
 }
 
-/* ****************************************************** */
-
 
 /* center navigation */
 .header-container nav {
@@ -116,3 +109,30 @@ a:link {
   align-items: center;
 }
 /* ****************************************************** */
+
+/* Responsive */
+
+
+
+
+
+/* For desktop: */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+}
