--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,16 +1,19 @@
 .footer-container {
-  font-size: 13px;
-  color: gray;
-  background-color: white;
-  margin: 50px 0 50px 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   width: 100%;
-  font-family: 'Open Sans', sans-serif;
+  height: 80px;
+  background-color: rgb(230, 230, 230);
 }
 
-.footer-center-text {
+.footer-text {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 13px;
+  font-family: 'Open Sans', sans-serif;
+  color: gray;
 }
 
 .footer-container p {
@@ -19,5 +22,4 @@
   color: #707070;
   line-height: 22px;
   letter-spacing: .01em;
-  /* letter-spacing: 0.08em; */
 }
