--- a/src/containers/Content/content.css
+++ b/src/containers/Content/content.css
@@ -28,17 +28,15 @@
 }
 
 .content-text {
-  /* font-stretch: ultra-expanded; */
   letter-spacing: 2px;
   font-size: 50px;
   padding: 160px 20% 0 20%;
-  /* width: 75%; */
   text-align: center;
 }
 
 .content-text-calling {
   text-align: center;
-  padding: 30px 0 5px 0;
+  margin: 30px 0 15px 0;
 }
 
 .content-button-center {
@@ -65,17 +63,6 @@
   cursor: pointer;
 }
 /* ***************************************************************** */
-
-
-.content-button-submit {
-  font-weight: 500;
-  background: rgb(255, 255, 70);
-  border: none;
-  width: 200px;
-  height: 44px;
-  border-radius: 22px;
-  cursor: pointer;
-}
 
 .content-img-car {
   display: block;
