--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   width: 100%;
   height: 80px;
-  background-color: rgb(230, 230, 230);
+  background-color: #f5f5f5;
 }
 
 .footer-text {
