--- a/src/containers/Content/content.css
+++ b/src/containers/Content/content.css
@@ -11,12 +11,11 @@
   margin: 40px 0 20px 0;
 }
 
-/* input text style */
 .content-submit-form>input[type=text] {
   padding: 10px;
   border: none;
   border-radius: 4px;
-  margin: 0 12px 0 12px;
+  margin: 0 12px;
   width: 400px;
   font-size: 20px;
 }
@@ -30,7 +29,7 @@
 .content-text {
   letter-spacing: 2px;
   font-size: 50px;
-  padding: 160px 20% 0 20%;
+  padding: 160px 25% 0 25%;
   text-align: center;
 }
 
@@ -43,18 +42,13 @@
   text-align: center;
 }
 
-
-/* number text */
 .content-text-number {
-  font-size: 36px;
-  color: rgb(255, 255, 70);
-  text-align: center;
-  animation: redNumber;
-  font-weight: 600;
   display: flex;
   justify-content: center;
+  font-size: 36px;
+  color: rgb(255, 255, 70);
+  font-weight: 600;
   padding-bottom: 60px;
-
   transition: color 0.4s ease-out;
 }
 
@@ -62,7 +56,6 @@
   color: #e61400;
   cursor: pointer;
 }
-/* ***************************************************************** */
 
 .content-img-car {
   display: block;
@@ -72,4 +65,8 @@
   position: relative;
   z-index: 2;
   top: 30px;
+}
+
+.b-p {
+  padding: 100px 0;
 }
