--- a/src/containers/Requirements/requirements.css
+++ b/src/containers/Requirements/requirements.css
@@ -1,18 +1,15 @@
 .requirements-container {
   display: flex;
-  
+  justify-content: space-between;
+  align-items: center;
   padding: 100px 0;
-}
-
-.requirements-label {
-  font-size: 48px;
-  text-align: left;
-  padding: 100px 80px 0px 80px;
+  background-color: #f5f5f5;
 }
 
 .requirements-list-block {
   color: #707070;
-  padding: 50px;
+  margin-left: 200px;
+  width: 400px;
 }
 
 .requirements-list-check-icon {
@@ -27,21 +24,10 @@
   padding: 5px;
 }
 
-.requirements-button {
-  margin-top: 50px 0 0 50px;
-  padding: 20px 42px;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  border: none;
-  border-radius: 30px;
-  background-color: #ffdb4d;
-  cursor: pointer;
-}
+
 
 .requirements-container img {
   height: 100%;
-  width: auto;
-  max-width: none;
-  margin-left: 400px;
+  margin-left: 200px;
+  /* width: auto; */
 }
