--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   font-size: 13px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: gray;
 }
 
