--- a/src/containers/Requirements/requirements.css
+++ b/src/containers/Requirements/requirements.css
@@ -2,13 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr; */
   padding: 100px 0;
   background-color: #f5f5f5;
 }
 
 .requirements-list-block {
   color: #707070;
-  margin-left: 200px;
+  margin-left: 150px;
   width: 400px;
 }
 
@@ -28,6 +30,92 @@
 
 .requirements-container img {
   height: 100%;
-  margin-left: 200px;
-  /* width: auto; */
+  /* width: 100%; */
+  /* margin-left: 200px; */
+}
+
+@media (max-width: 1240px) {
+  .requirements-list-block {
+    width: 300px;
+    margin-left: 100px;
+  }
+  .requirements-container img {
+    height: 70%;
+    width: 70%;
+    margin-left: 100px;
+  }
+}
+
+@media (max-width: 768px) {
+}
+
+/* 
+Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+*/
+
+
+
+
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  
 }
