--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -3,14 +3,14 @@
   height: 44px;
   font-weight: 600;
   border-radius: 22px;
-  background-color: rgb(255, 255, 70);
+  background-color: #ffff46;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease-in;
 }
 
 .button:hover {
-  background-color: rgb(255, 255, 0);
+  background-color: #ffff00;
 }
 
 .requirements-button {
