--- a/src/containers/Content/content.css
+++ b/src/containers/Content/content.css
@@ -1,7 +1,6 @@
 .content-container {
   font-size: 20px;
   color: white;
-  width: 80%;
 }
 
 .content-submit-form {
@@ -20,8 +19,12 @@
   font-size: 20px;
 }
 
+/* .content-submit-form > input[type=text]::before {
+  content: '2';
+} */
+
 .content-submit-form input[type=text]::placeholder {
-  color: rgb(168, 168, 168);
+  color: #a8a8a8;
   font-size: 0.80em;
   padding-left: 7px;
 }
@@ -47,9 +50,9 @@
   display: flex;
   justify-content: center;
   font-size: 36px;
-  color: rgb(255, 255, 70);
+  color: #ffff46;
   font-weight: 600;
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
   transition: color 0.4s ease-out;
 }
 
@@ -62,12 +65,24 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 80px;
   width: 65%;
-  position: relative;
-  top: 30px;
-  z-index: 2;
+  /* position: relative;
+  top: 30px; */
 }
 
 .b-p {
-  padding: 100px 0;
+  /* padding: 100px 0; */
+}
+
+@media (max-width: 960px) {
+  .content-img-car {
+    width: 70%;
+  }
+}
+
+@media (max-width: 767px) {
+  .content-img-car {
+    width: 80%;
+  }
 }
