--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -62,6 +62,7 @@ a:visited {
 }
 
 a:link {
+  color: white;
   text-decoration: none;
 }
 
@@ -78,4 +79,14 @@ a:link {
   align-items: center;
 }
 
-.button {}
+.menu-icon {
+  color: white;
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .menu-icon {
+    display: initial;
+  }
+}
