--- a/src/containers/Application/application.css
+++ b/src/containers/Application/application.css
@@ -6,10 +6,10 @@
   width: 300px;
 }
 
-.application-label {
+/* .application-label {
   font-size: 48px;
   padding: 80px 0 60px 0;
-}
+} */
 
 .application-grid {
   display: grid;
@@ -37,7 +37,7 @@
   font-size: 14px;
   text-align: center;
   font-weight: 100px;
-  line-height: 24px;
+  line-height: 20px;
 }
 
 .application-icon-container {
@@ -53,4 +53,24 @@
 
 .text-center {
   text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .application-container {
+    padding-bottom: 50px;
+  }
+  .application-container img {
+    width: 200px;
+  }
+  .application-grid {
+    grid-template-columns: 1fr 200px 1fr;
+    grid-gap: 20px;
+    margin: 0 10px;
+  }
+  .application-grid-block {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    padding: 25px;
+    margin-top: 50px;
+  }
 }
