Add data to render in containers

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,3 +16,9 @@ h3 {
 .text-center {
   text-align: center;
 }
+
+.block-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
